revise hw1 content

--- a/content/hwpages2.html
+++ b/content/hwpages2.html
@@ -478,7 +478,8 @@ img.add_border {
 <td width="351"><a href="https://github.com/40971227/cad2021_hw">https://github.com/40971227/cad2021_hw</a></td>
 </tr>
 </tbody>
-</table><br />hwpages1 << <a href='hwpages1.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1</div>
+</table>
+<br />hwpages1 << <a href='hwpages1.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1</div>
         
     <!-- footer -->
       <div class="container">
