inventor download video upload

--- a/config/content.htm
+++ b/config/content.htm
@@ -775,9 +775,8 @@ end</pre>
 <p>請不要直接從找到的 CAD1 套件說明複製貼上, 而是應該要看完各種參考資料後, 重新打字彙整.</p>
 <h3>CAD1 安裝配置</h3>
 <p></p>
-<h4>Inventor:</h4>
-<p style="padding-left: 30px;"></p>
-<p>youtube:學校vpn申請中.....</p><h3>CAD1 操作流程</h3>
+<h4>Inventor</h4>
+<p>youtube:<a href="https://www.youtube.com/watch?v=dIjgFTuuijg">https://www.youtube.com/watch?v=dIjgFTuuijg</a></p><h3>CAD1 操作流程</h3>
 <p>CAD1 指各學員所分配到的第一套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
 <p>CAD1 零組件繪圖操作流程影片 (Youtube)</p>
 <p>youtube:</p>
