--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -776,8 +776,8 @@ end</pre>
 <h3>CAD1 安裝配置</h3>
 <p></p>
 <h4>Inventor:</h4>
-<p style="padding-left: 30px;">先前申請過學生版本，所以只用以前安裝的程式</p>
-<h4></h4><h3>CAD1 操作流程</h3>
+<p style="padding-left: 30px;"></p>
+<p>youtube:學校vpn申請中.....</p><h3>CAD1 操作流程</h3>
 <p>CAD1 指各學員所分配到的第一套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
 <p>CAD1 零組件繪圖操作流程影片 (Youtube)</p>
 <p>youtube:</p>
