--- a/content/CAD1 安裝配置.html
+++ b/content/CAD1 安裝配置.html
@@ -141,9 +141,8 @@ img.add_border {
         </header>
     <div id="tipue_search_content">CAD1 繪圖 << <a href='CAD1 繪圖.html'>Previous</a> <a href='CAD1 操作流程.html'>Next</a> >> CAD1 操作流程<br /><h1>CAD1 安裝配置</h1>
 <p></p>
-<h4>Inventor:</h4>
-<p style="padding-left: 30px;"></p>
-<p>youtube:學校vpn申請中.....</p><br />CAD1 繪圖 << <a href='CAD1 繪圖.html'>Previous</a> <a href='CAD1 操作流程.html'>Next</a> >> CAD1 操作流程</div>
+<h4>Inventor</h4>
+<p>youtube:<a href="https://www.youtube.com/watch?v=dIjgFTuuijg">https://www.youtube.com/watch?v=dIjgFTuuijg</a></p><br />CAD1 繪圖 << <a href='CAD1 繪圖.html'>Previous</a> <a href='CAD1 操作流程.html'>Next</a> >> CAD1 操作流程</div>
         
     <!-- footer -->
       <div class="container">
