add planned speed

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -770,10 +770,8 @@ end</pre>
 <p>(From: <a href="/downloads/2016_ADDITIVE MANUFACTURING PROCESSES FOR FABRICATING A MINI ROBOT - COMPUTATIONAL MODELS AND EXPERIMENTAL RESULTS.pdf">2016_ADDITIVE MANUFACTURING PROCESSES FOR FABRICATING A MINI ROBOT - COMPUTATIONAL MODELS AND EXPERIMENTAL RESULTS.pdf</a>)</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/2pFReCfDZsU" title="YouTube video player" width="560"></iframe></p>
 <h2>CAD1 繪圖</h2>
-<p>CAD1 指各學員所分配到的第一套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
-<p>CAD1 緣起說明與介紹</p>
-<p>請不要直接從找到的 CAD1 套件說明複製貼上, 而是應該要看完各種參考資料後, 重新打字彙整.</p>
-<h3>CAD1 安裝配置</h3>
+<p>CAD1 被分配到 Inventor</p>
+<p></p><h3>CAD1 安裝配置</h3>
 <p></p>
 <h4>Inventor</h4>
 <p>youtube:<a href="https://www.youtube.com/watch?v=dIjgFTuuijg">https://www.youtube.com/watch?v=dIjgFTuuijg</a></p><h3>CAD1 操作流程</h3>
