--- a/config/content.htm
+++ b/config/content.htm
@@ -771,18 +771,22 @@ end</pre>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/2pFReCfDZsU" title="YouTube video player" width="560"></iframe></p>
 <h2>CAD1 繪圖</h2>
 <p>CAD1 被分配到 Inventor</p>
-<p></p><h3>CAD1 安裝配置</h3>
+<p></p>
+<h3>CAD1 安裝配置</h3>
 <p></p>
 <h4>Inventor</h4>
-<p>youtube:<a href="https://www.youtube.com/watch?v=dIjgFTuuijg">https://www.youtube.com/watch?v=dIjgFTuuijg</a></p><h3>CAD1 操作流程</h3>
+<p>youtube:<a href="https://www.youtube.com/watch?v=dIjgFTuuijg">https://www.youtube.com/watch?v=dIjgFTuuijg</a></p>
+<h3>CAD1 操作流程</h3>
 <p>CAD1 指各學員所分配到的第一套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
 <p>CAD1 零組件繪圖操作流程影片 (Youtube)</p>
 <p>youtube:</p>
 <p>CAD1 零組件繪圖教學影片 (Wink)</p>
 <p>CAD1 零組件繪圖教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>零組件繪圖教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.<br/></span></p>
-<p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p><h2>CAD2 繪圖</h2>
+<p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p>
+<h2>CAD2 繪圖</h2>
 <p>CAD2 被分配到 Solvespace.</p>
-<p></p><h3>CAD2 安裝配置</h3>
+<p></p>
+<h3>CAD2 安裝配置</h3>
 <p>CAD2 指各學員所分配到的第二套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
 <p>CAD2 套件下載安裝與配置</p>
 <p>CAD2 套件下載安裝與配置影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>套件下載安裝與配置影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.<br/></span></p>
@@ -849,3 +853,10 @@ end</pre>
 <h4>範例:</h4>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/2qc0-yTXBts" title="YouTube video player" width="560"></iframe></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/PDSmRPh6TaM" title="YouTube video player" width="560"></iframe></p>
+<h1><span>planned speed</span></h1>
+<p><span>hwpages1  100%</span></p>
+<p><span>hw<span>pages</span>2  100%</span></p>
+<p>cad1(inventor)   80%</p>
+<p>cad2(solveSpace)  20%</p>
+<p>HW2  0%</p>
+<p>HW3  0%</p>
