--- a/content/CAD1 安裝配置.html
+++ b/content/CAD1 安裝配置.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='task.html'>task</a><ul class='dropdown'><li><a href='hwpages1.html'>hwpages1</a><li><a href='hwpages2.html'>hwpages2</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='CAD1 繪圖.html'>CAD1 繪圖</a><ul class='dropdown'><li><a href='CAD1 安裝配置.html'>CAD1 安裝配置</a><li><a href='CAD1 操作流程.html'>CAD1 操作流程</a></li></ul><li class='has-children'><a href='CAD2 繪圖.html'>CAD2 繪圖</a><ul class='dropdown'><li><a href='CAD2 安裝配置.html'>CAD2 安裝配置</a><li><a href='CAD2 操作流程.html'>CAD2 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='task.html'>task</a><ul class='dropdown'><li><a href='hwpages1.html'>hwpages1</a><li><a href='hwpages2.html'>hwpages2</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='CAD1 繪圖.html'>CAD1 繪圖</a><ul class='dropdown'><li><a href='CAD1 安裝配置.html'>CAD1 安裝配置</a><li><a href='CAD1 操作流程.html'>CAD1 操作流程</a></li></ul><li class='has-children'><a href='CAD2 繪圖.html'>CAD2 繪圖</a><ul class='dropdown'><li><a href='CAD2 安裝配置.html'>CAD2 安裝配置</a><li><a href='CAD2 操作流程.html'>CAD2 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a><li><a href='planned speed.html'>planned speed</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,7 +142,8 @@ img.add_border {
     <div id="tipue_search_content">CAD1 繪圖 << <a href='CAD1 繪圖.html'>Previous</a> <a href='CAD1 操作流程.html'>Next</a> >> CAD1 操作流程<br /><h1>CAD1 安裝配置</h1>
 <p></p>
 <h4>Inventor</h4>
-<p>youtube:<a href="https://www.youtube.com/watch?v=dIjgFTuuijg">https://www.youtube.com/watch?v=dIjgFTuuijg</a></p><br />CAD1 繪圖 << <a href='CAD1 繪圖.html'>Previous</a> <a href='CAD1 操作流程.html'>Next</a> >> CAD1 操作流程</div>
+<p>youtube:<a href="https://www.youtube.com/watch?v=dIjgFTuuijg">https://www.youtube.com/watch?v=dIjgFTuuijg</a></p>
+<br />CAD1 繪圖 << <a href='CAD1 繪圖.html'>Previous</a> <a href='CAD1 操作流程.html'>Next</a> >> CAD1 操作流程</div>
         
     <!-- footer -->
       <div class="container">
