--- a/config/content.htm
+++ b/config/content.htm
@@ -781,7 +781,7 @@ end</pre>
 <p>CAD1 零組件繪圖操作流程影片 (Youtube)</p>
 <p><span>Youtube:</span></p>
 <p>CAD1 零組件繪圖教學影片 (Wink)</p>
-<p>CAD1 零組件繪圖教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>零組件繪圖教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.<br/></span></p>
+<p>CAD1 零組件繪圖教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 40923230 - int2021 </span>零組件繪圖教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.<br/></span></p>
 <p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p><h2>CAD2 繪圖</h2>
 <p>CAD2 被分配到 Solvespace.</p>
 <p></p>
@@ -790,10 +790,10 @@ end</pre>
 <p>Youtube:</p><h3>CAD2 操作流程</h3>
 <p>CAD2 指各學員所分配到的第二套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
 <p>CAD2 零組件繪圖操作流程影片 (Youtube)</p>
+<p><span>Youtube:</span></p>
 <p>CAD2 零組件繪圖教學影片 (Wink)</p>
-<p>CAD2 零組件繪圖教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>零組件繪圖教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.<br/></span></p>
-<p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p>
-<h2>運動場景</h2>
+<p>CAD2 零組件繪圖教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 40923230<span> </span>-<span> solvespace</span></span><span>零組件繪圖教學影片</span>」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.<br/></span></p>
+<p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p><h2>運動場景</h2>
 <h4>CAD1:</h4>
 <p style="padding-left: 30px;">CAD1 零件轉出後轉入 CoppeliaSim 操作影片 (Youtube)</p>
 <p style="padding-left: 30px;">CAD1 零件轉入 CoppeliaSim 教學影片 (Wink)</p>
