--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -777,13 +777,12 @@ end</pre>
 <h4>Inventor</h4>
 <p>youtube:<a href="https://www.youtube.com/watch?v=dIjgFTuuijg">https://www.youtube.com/watch?v=dIjgFTuuijg</a></p>
 <h3>CAD1 操作流程</h3>
-<p>CAD1 指各學員所分配到的第一套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
+<p>CAD1 Inventor</p>
 <p>CAD1 零組件繪圖操作流程影片 (Youtube)</p>
-<p>youtube:</p>
+<p><span>Youtube:</span></p>
 <p>CAD1 零組件繪圖教學影片 (Wink)</p>
-<p>CAD1 零組件繪圖教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>零組件繪圖教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.<br/></span></p>
-<p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p>
-<h2>CAD2 繪圖</h2>
+<p>CAD1 零組件繪圖教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 40923230 - int2021 </span>零組件繪圖教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.<br/></span></p>
+<p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p><h2>CAD2 繪圖</h2>
 <p>CAD2 被分配到 Solvespace.</p>
 <p></p>
 <h3>CAD2 安裝配置</h3>
