--- a/config/content.htm
+++ b/config/content.htm
@@ -1,11 +1,10 @@
 <h1>About</h1>
 <p>本學期的電腦輔助設計實習, 要求每一位學員根據本 HW template 的格式建立個人的作業倉儲與網頁.</p>
 <hr/>
-<p>40923230</p>
+<p>40923230 黃暐哲</p>
 <p>網站倉儲: <a href="https://github.com/40923230/cad2021_hw">https://github.com/40923230/cad2021_hw</a></p>
 <p>網站連結: <a href="https://mde.tw/cad2021_hw">https://mde.tw/cad2021_hw</a></p>
-<p>其他與作者或作業相關資料說明或介紹</p>
-<h1>task</h1>
+<p>其他與作者或作業相關資料說明或介紹</p><h1>task</h1>
 <h2>hwpages1</h2>
 <table style="width: 564px;">
 <tbody>
