--- a/content/W13.html
+++ b/content/W13.html
@@ -141,7 +141,28 @@ img.add_border {
         </header>
     <div id="tipue_search_content">H2 << <a href='H2.html'>Previous</a> <a href='HW1-1.html'>Next</a> >> HW1-1<br /><h1>W13</h1>
 <p></p>
-<br />H2 << <a href='H2.html'>Previous</a> <a href='HW1-1.html'>Next</a> >> HW1-1</div>
+<script>
+var winkVideoData = {
+dataVersion: 1,
+frameRate: 20,
+buttonFrameLength: 10,
+buttonFrameOffset: 5,
+frameStops: {
+},
+};
+</script>
+<div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="720" width="1280">
+<source src="./../downloads/inventor.mp4" type="video/mp4"/></video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
+<div class="winkVideoPlayOverlayClass"></div>
+</div><br />H2 << <a href='H2.html'>Previous</a> <a href='HW1-1.html'>Next</a> >> HW1-1</div>
         
     <!-- footer -->
       <div class="container">
