--- a/content/About.html
+++ b/content/About.html
@@ -144,9 +144,8 @@ img.add_border {
 <hr/>
 <p>40923230 黃暐哲</p>
 <p>網站倉儲: <a href="https://github.com/40923230/cad2021_hw">https://github.com/40923230/cad2021_hw</a></p>
-<p>網站連結: <a href="https://mde.tw/cad2021_hw">https://mde.tw/cad2021_hw</a></p>
-<p>其他與作者或作業相關資料說明或介紹</p>
-<br /> <a href='task.html'>Next</a> >> task</div>
+<p>網站連結: <a href="https://40923230.github.io/cad2021_hw/content/index.html">https://40923230.github.io/cad2021_hw/content/index.html</a></p>
+<p>其他與作者或作業相關資料說明或介紹</p><br /> <a href='task.html'>Next</a> >> task</div>
         
     <!-- footer -->
       <div class="container">
