--- a/config/content.htm
+++ b/config/content.htm
@@ -892,6 +892,7 @@ frameStops: {
 <p><span style="background-color: #ffff99;">2a 與 2b 必須在 2022.01.06 上課之前完成 Final Project</span></p>
 <p><a href="https://github.com/mdecourse/cad2021/discussions/8"></a>-----------------------------------------------------------------------------------------------------</p>
 <p>零件圖+組合圖</p>
+<p>運作模擬</p>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -903,16 +904,16 @@ var winkVideoData = {
 };
 </script>
 <div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="756" video="" width="1344">
-<source src="/downloads/40923230期末考1.mp4" type="video/mp4"/>
-</video>
+<source src="/downloads/40923230期末考1.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
-<div class="winkVideoControlBarProgressLeftClass">-----------------------------------------------------------------------------------------------------</div>
 <div class="winkVideoControlBarProgressLeftClass"></div>
-<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
-<div class="winkVideoControlBarProgressRightClass"></div>
-<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
-<div class="winkVideoControlBarProgressThumbClass">運動情形模擬</div>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressLeftClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
 </div>
@@ -927,8 +928,7 @@ var winkVideoData = {
 };
 </script>
 <div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="788" video="" width="1402">
-<source src="/downloads/移動.mp4" type="video/mp4"/>
-</video>
+<source src="/downloads/移動.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass">-----------------------------------------------------------------------------------------------------</div>
