--- a/config/content.htm
+++ b/config/content.htm
@@ -4,7 +4,8 @@
 <p>40923230 黃暐哲</p>
 <p>網站倉儲: <a href="https://github.com/40923230/cad2021_hw">https://github.com/40923230/cad2021_hw</a></p>
 <p>網站連結: <a href="https://40923230.github.io/cad2021_hw/content/index.html">https://40923230.github.io/cad2021_hw/content/index.html</a></p>
-<p>其他與作者或作業相關資料說明或介紹</p><h1>task</h1>
+<p>其他與作者或作業相關資料說明或介紹</p>
+<h1>task</h1>
 <h2>hwpages1</h2>
 <table style="width: 564px;">
 <tbody>
@@ -809,6 +810,7 @@ end</pre>
 <h1>H2</h1>
 <h2>W13</h2>
 <p></p>
+<p>
 <script>
 var winkVideoData = {
 dataVersion: 1,
@@ -819,6 +821,7 @@ frameStops: {
 },
 };
 </script>
+</p>
 <div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="720" width="1280">
 <source src="./../downloads/inventor.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
@@ -830,7 +833,8 @@ frameStops: {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div><h1>HW1-1</h1>
+</div>
+<h1>HW1-1</h1>
 <p>HW1-1 佔學期成績 15%</p>
 <p><span style="background-color: #ffff99;">HW1-1 必須在 2021.12.01 22:00 之前完成.<br/></span></p>
 <p><a href="https://github.com/mdecourse/cad2021/discussions/6">HW1-1 具體項目成果回報區</a>將於 2021.11.18 開啟, 於 <span style="background-color: #ff99cc;">2021.12.01 22:00 關閉.</span></p>
@@ -838,6 +842,7 @@ frameStops: {
 <p>說明: meArm Robot 有四個自由度, 請根據 HW1 的零組件繪製組立與 CoppeliaSim 運動場景模擬, 延伸至 <a href="https://mde.tw/cad2021/content/Task1-1.html">Task1-1</a> 中六個自由度的 Mirobot 機械手臂.</p>
 <p><a href="https://drive.google.com/file/d/1hnoMQ1Hh_Hgdxh7Aym4q43DzLjOWUanR/view?usp=sharing">mirobot_part1_to_part5.7z</a> 為取自  <a href="https://github.com/wlkata/Mirobot-STL">https://github.com/wlkata/Mirobot-STL</a> 的參考零件. 請利用場景中 Mirobot STL 零件, 組合為可以透過 <a href="https://www.coppeliarobotics.com/helpFiles/en/customUIPlugin.htm">UI 介面</a>中的 slider 控制各軸作動旋轉的運動模型.</p>
 <p>請根據 <a href="https://mde.tw/cad2021/content/Task1-1.html">Task1-1</a> 中的說明, 完成各項指定任務.</p>
+<p>
 <script>
 var winkVideoData = {
 dataVersion: 1,
@@ -848,6 +853,7 @@ frameStops: {
 },
 };
 </script>
+</p>
 <div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="1080" width="1920">
 <source src="./../downloads/300.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
@@ -859,7 +865,8 @@ frameStops: {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div><h1>HW2</h1>
+</div>
+<h1>HW2</h1>
 <p>HW2 佔學期成績 20%</p>
 <p><span style="background-color: #ffff99;">HW2 必須在 2021.12.22 22:00 之前完成.</span></p>
 <p><a href="https://github.com/mdecourse/cad2021/discussions/7">HW2 具體項目成果回報區</a>將於 2021.12.09 開啟, 於 <span style="background-color: #ff99cc;">2021.12.22 22:00 關閉.</span></p>
@@ -892,9 +899,9 @@ frameStops: {
 <p><span style="background-color: #ffff99;">2a 與 2b 必須在 2022.01.06 上課之前完成 Final Project</span></p>
 <p><a href="https://github.com/mdecourse/cad2021/discussions/8"></a>-----------------------------------------------------------------------------------------------------</p>
 <h2>40923230</h2>
-<h3>零件圖+組合圖</h3>
+<p>零件圖+組合圖</p>
 <p></p>
-<p></p>
+<p>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -905,21 +912,21 @@ var winkVideoData = {
   },
 };
 </script>
-<div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="756" video="" width="1344">
+</p>
+<div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="788" video="" width="1402">
 <source src="/downloads/40923230期末考1.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
-<div class="winkVideoControlBarProgressLeftClass"></div>
-<div class="winkVideoControlBarProgressLeftClass"></div>
-<div class="winkVideoControlBarProgressLeftClass"></div>
-<div class="winkVideoControlBarProgressLeftClass"></div>
-<div class="winkVideoControlBarProgressLeftClass">
-<h3>畫圖</h3>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
-<div class="winkVideoControlBarProgressLeftClass"></div>
-<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoPlayOverlayClass"></div>
 </div>
+<p>-------------------------------------------------------------------</p>
+<p>畫圖</p>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -939,12 +946,11 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressRightClass"></div>
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
 <div class="winkVideoControlBarProgressThumbClass"></div>
-<h3 class="winkVideoControlBarProgressThumbClass">運作模擬</h3>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
 </div>
-<div class="winkVideoPlayOverlayClass"></div>
-</div>
+<p>-------------------------------------------------------------------</p>
+<p>運作模擬</p>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -959,7 +965,7 @@ var winkVideoData = {
 <source src="/downloads/移動.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
-<div class="winkVideoControlBarProgressLeftClass">-----------------------------------------------------------------------------------------------------</div>
+<div class="winkVideoControlBarProgressLeftClass"></div>
 <div class="winkVideoControlBarProgressLeftClass"></div>
 <div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
 <div class="winkVideoControlBarProgressRightClass"></div>
