--- a/content/40923230.html
+++ b/content/40923230.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='task.html'>task</a><ul class='dropdown'><li><a href='hwpages1.html'>hwpages1</a><li><a href='hwpages2.html'>hwpages2</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='CAD1 繪圖.html'>CAD1 繪圖</a><ul class='dropdown'><li><a href='CAD1 安裝配置.html'>CAD1 安裝配置</a><li><a href='CAD1 操作流程.html'>CAD1 操作流程</a></li></ul><li class='has-children'><a href='CAD2 繪圖.html'>CAD2 繪圖</a><ul class='dropdown'><li><a href='CAD2 安裝配置.html'>CAD2 安裝配置</a><li><a href='CAD2 操作流程.html'>CAD2 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a></li></ul><li class='has-children'><a href='H2.html'>H2</a><ul class='dropdown'><li><a href='W13.html'>W13</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li class='has-children'><a href='Final Project.html'>Final Project</a><ul class='dropdown'><li class='has-children'><a href='40923230.html'>40923230</a><ul class='dropdown'><li><a href='零件圖+組合圖.html'>零件圖+組合圖</a><li><a href='畫圖.html'>畫圖</a><li><a href='運作模擬.html'>運作模擬</a></li></li></ul></ul><li><a href='planned speed.html'>planned speed</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='task.html'>task</a><ul class='dropdown'><li><a href='hwpages1.html'>hwpages1</a><li><a href='hwpages2.html'>hwpages2</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='CAD1 繪圖.html'>CAD1 繪圖</a><ul class='dropdown'><li><a href='CAD1 安裝配置.html'>CAD1 安裝配置</a><li><a href='CAD1 操作流程.html'>CAD1 操作流程</a></li></ul><li class='has-children'><a href='CAD2 繪圖.html'>CAD2 繪圖</a><ul class='dropdown'><li><a href='CAD2 安裝配置.html'>CAD2 安裝配置</a><li><a href='CAD2 操作流程.html'>CAD2 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a></li></ul><li class='has-children'><a href='H2.html'>H2</a><ul class='dropdown'><li><a href='W13.html'>W13</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li class='has-children'><a href='Final Project.html'>Final Project</a><ul class='dropdown'><li><a href='40923230.html'>40923230</a></li></ul><li><a href='planned speed.html'>planned speed</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,8 +139,82 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Final Project << <a href='Final Project.html'>Previous</a> <a href='零件圖+組合圖.html'>Next</a> >> 零件圖+組合圖<br /><h1>40923230</h1>
-<br />Final Project << <a href='Final Project.html'>Previous</a> <a href='零件圖+組合圖.html'>Next</a> >> 零件圖+組合圖</div>
+    <div id="tipue_search_content">Final Project << <a href='Final Project.html'>Previous</a> <a href='planned speed.html'>Next</a> >> planned speed<br /><h1>40923230</h1>
+<p>零件圖+組合圖</p>
+<p></p>
+<p>
+<script>
+var winkVideoData = {
+  dataVersion: 1,
+  frameRate: 20,
+  buttonFrameLength: 10,
+  buttonFrameOffset: 5,
+  frameStops: {
+  },
+};
+</script>
+</p>
+<div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="788" video="" width="1402">
+<source src="./../downloads/40923230期末考1.mp4" type="video/mp4"/></video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
+<div class="winkVideoPlayOverlayClass"></div>
+</div>
+<p>-------------------------------------------------------------------</p>
+<p>畫圖</p>
+<script>
+var winkVideoData = {
+  dataVersion: 1,
+  frameRate: 20,
+  buttonFrameLength: 10,
+  buttonFrameOffset: 5,
+  frameStops: {
+  },
+};
+</script>
+<div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="756" video="" width="1344">
+<source src="./../downloads/畫圖.mp4" type="video/mp4"/></video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
+<div class="winkVideoPlayOverlayClass"></div>
+</div>
+<p>-------------------------------------------------------------------</p>
+<p>運作模擬</p>
+<script>
+var winkVideoData = {
+  dataVersion: 1,
+  frameRate: 20,
+  buttonFrameLength: 10,
+  buttonFrameOffset: 5,
+  frameStops: {
+  },
+};
+</script>
+<div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="788" video="" width="1402">
+<source src="./../downloads/移動.mp4" type="video/mp4"/></video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
+<div class="winkVideoPlayOverlayClass"></div>
+</div><br />Final Project << <a href='Final Project.html'>Previous</a> <a href='planned speed.html'>Next</a> >> planned speed</div>
         
     <!-- footer -->
       <div class="container">
