--- a/content/40923230.html
+++ b/content/40923230.html
@@ -228,7 +228,7 @@ var winkVideoData = {
 };
 </script>
 <div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="756" video="" width="1344">
-<source src="./../downloads/延伸.mp4" type="video/mp4"/></video>
+<source src="https://40923230.github.io/cad2021_hw/downloads/%E5%BB%B6%E4%BC%B8.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
@@ -240,8 +240,7 @@ var winkVideoData = {
 </div>
 <p>-------------------------------------------------------------------</p>
 <p>這學期的課程非常艱深，不僅需要繪圖，還會用到不熟悉的繪圖軟體，還要撰寫程式讓組合件可以運作，就像全部從零開始一樣，邏輯必須清晰，還好老師有開放線上討論區幫助我解決難題，還有優秀的組長及組員的幫助讓我能夠完成這次的作業。</p>
-<p>-------------------------------------------------------------------</p>
-<br />Final Project << <a href='Final Project.html'>Previous</a> <a href='期末考試.html'>Next</a> >> 期末考試</div>
+<p>-------------------------------------------------------------------</p><br />Final Project << <a href='Final Project.html'>Previous</a> <a href='期末考試.html'>Next</a> >> 期末考試</div>
         
     <!-- footer -->
       <div class="container">
