--- a/content/期末考試.html
+++ b/content/期末考試.html
@@ -140,6 +140,31 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">40923230 << <a href='40923230.html'>Previous</a> <a href='planned speed.html'>Next</a> >> planned speed<br /><h1>期末考試</h1>
+<p>零件圖+組合圖</p>
+<script>
+var winkVideoData = {
+  dataVersion: 1,
+  frameRate: 20,
+  buttonFrameLength: 10,
+  buttonFrameOffset: 5,
+  frameStops: {
+  },
+};
+</script>
+<div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="720" video="" width="1280">
+<source src="./../downloads/inventor2.mp4" type="video/mp4"/>
+</video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
+<div class="winkVideoPlayOverlayClass"></div>
+</div>
+<p>-------------------------------------------------------------------</p>
 <p>機械手臂</p>
 <script>
 var winkVideoData = {
@@ -162,7 +187,8 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div><br />40923230 << <a href='40923230.html'>Previous</a> <a href='planned speed.html'>Next</a> >> planned speed</div>
+</div>
+<br />40923230 << <a href='40923230.html'>Previous</a> <a href='planned speed.html'>Next</a> >> planned speed</div>
         
     <!-- footer -->
       <div class="container">
