--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -987,7 +987,7 @@ var winkVideoData = {
 };
 </script>
 <div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="756" video="" width="1344">
-<source src="/downloads/延伸.mp4" type="video/mp4"/></video>
+<source src="https://40923230.github.io/cad2021_hw/downloads/%E5%BB%B6%E4%BC%B8.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
@@ -999,8 +999,7 @@ var winkVideoData = {
 </div>
 <p>-------------------------------------------------------------------</p>
 <p>這學期的課程非常艱深，不僅需要繪圖，還會用到不熟悉的繪圖軟體，還要撰寫程式讓組合件可以運作，就像全部從零開始一樣，邏輯必須清晰，還好老師有開放線上討論區幫助我解決難題，還有優秀的組長及組員的幫助讓我能夠完成這次的作業。</p>
-<p>-------------------------------------------------------------------</p>
-<h1>期末考試</h1>
+<p>-------------------------------------------------------------------</p><h1>期末考試</h1>
 <p>機械手臂</p>
 <script>
 var winkVideoData = {
