--- a/config/content.htm
+++ b/config/content.htm
@@ -1047,7 +1047,9 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div><h1>planned speed</h1>
+</div>
+<p>-------------------------------------------------------------------</p>
+<p><a href="https://drive.google.com/file/d/1M0astGy10GkcPQx0liMKx4crg4hbk21S/view?usp=sharing">https://drive.google.com/file/d/1M0astGy10GkcPQx0liMKx4crg4hbk21S/view?usp=sharing</a></p><h1>planned speed</h1>
 <p><span>hwpages1  100%</span></p>
 <p><span>hw<span>pages</span>2  100%</span></p>
 <p>cad1(inventor)   80%</p>
