--- a/content/期末考試.html
+++ b/content/期末考試.html
@@ -186,7 +186,9 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div><br />40923230 << <a href='40923230.html'>Previous</a> <a href='planned speed.html'>Next</a> >> planned speed</div>
+</div>
+<p>-------------------------------------------------------------------</p>
+<p><a href="https://drive.google.com/file/d/1M0astGy10GkcPQx0liMKx4crg4hbk21S/view?usp=sharing">https://drive.google.com/file/d/1M0astGy10GkcPQx0liMKx4crg4hbk21S/view?usp=sharing</a></p><br />40923230 << <a href='40923230.html'>Previous</a> <a href='planned speed.html'>Next</a> >> planned speed</div>
         
     <!-- footer -->
       <div class="container">
