--- a/content/期末考試.html
+++ b/content/期末考試.html
@@ -176,7 +176,8 @@ var winkVideoData = {
 };
 </script>
 <div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="756" video="" width="1344">
-<source src="https://40923230.github.io/cad2021_hw/downloads/2.mp4" type="video/mp4"/></video>
+<source src="./../downloads/40923230.mp4" type="video/mp4"/>
+</video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
@@ -188,7 +189,10 @@ var winkVideoData = {
 <div class="winkVideoPlayOverlayClass"></div>
 </div>
 <p>-------------------------------------------------------------------</p>
-<p><a href="https://drive.google.com/file/d/1M0astGy10GkcPQx0liMKx4crg4hbk21S/view?usp=sharing">https://drive.google.com/file/d/1M0astGy10GkcPQx0liMKx4crg4hbk21S/view?usp=sharing</a></p><br />40923230 << <a href='40923230.html'>Previous</a> <a href='planned speed.html'>Next</a> >> planned speed</div>
+<p>零件圖:</p>
+<p><a href="https://drive.google.com/file/d/1M0astGy10GkcPQx0liMKx4crg4hbk21S/view?usp=sharing">https://drive.google.com/file/d/1M0astGy10GkcPQx0liMKx4crg4hbk21S/view?usp=sharing</a></p>
+<p>coppeliasim:</p>
+<p><a href="https://drive.google.com/file/d/1vM7vyh7wMtv9ZmRReUF4LcY-m76Jk4a0/view?usp=sharing">https://drive.google.com/file/d/1vM7vyh7wMtv9ZmRReUF4LcY-m76Jk4a0/view?usp=sharing</a></p><br />40923230 << <a href='40923230.html'>Previous</a> <a href='planned speed.html'>Next</a> >> planned speed</div>
         
     <!-- footer -->
       <div class="container">
