--- a/config/content.htm
+++ b/config/content.htm
@@ -1037,7 +1037,8 @@ var winkVideoData = {
 };
 </script>
 <div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="756" video="" width="1344">
-<source src="https://40923230.github.io/cad2021_hw/downloads/2.mp4" type="video/mp4"/></video>
+<source src="/downloads/40923230.mp4" type="video/mp4"/>
+</video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
@@ -1049,7 +1050,10 @@ var winkVideoData = {
 <div class="winkVideoPlayOverlayClass"></div>
 </div>
 <p>-------------------------------------------------------------------</p>
-<p><a href="https://drive.google.com/file/d/1M0astGy10GkcPQx0liMKx4crg4hbk21S/view?usp=sharing">https://drive.google.com/file/d/1M0astGy10GkcPQx0liMKx4crg4hbk21S/view?usp=sharing</a></p><h1>planned speed</h1>
+<p>零件圖:</p>
+<p><a href="https://drive.google.com/file/d/1M0astGy10GkcPQx0liMKx4crg4hbk21S/view?usp=sharing">https://drive.google.com/file/d/1M0astGy10GkcPQx0liMKx4crg4hbk21S/view?usp=sharing</a></p>
+<p>coppeliasim:</p>
+<p><a href="https://drive.google.com/file/d/1vM7vyh7wMtv9ZmRReUF4LcY-m76Jk4a0/view?usp=sharing">https://drive.google.com/file/d/1vM7vyh7wMtv9ZmRReUF4LcY-m76Jk4a0/view?usp=sharing</a></p><h1>planned speed</h1>
 <p><span>hwpages1  100%</span></p>
 <p><span>hw<span>pages</span>2  100%</span></p>
 <p>cad1(inventor)   80%</p>
